tests/should_fail/struct_field_wrong_type.nv
module main

// SHOULD FAIL: assigning wrong type to a struct field
struct Config { count: Int }
let c = Config { count: "not an int" }
